# dhlrc

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  README_zh.md  dh_string_util.c  dh_string_util.h  dhlrc_config.h.in  dhlrc_list.c  dhlrc_list.h  dhlrc_qt.desktop  example.c  file_util.c  file_util.h  litematica_reader_c.pro  litematica_region.c  litematica_region.h  lrc_list.c  lrc_list.h  main.c  main.cpp  make_po.sh  nbtProcess.c  nbtProcess.h  nbt_litereader.c  nbt_litereader.h  recipe_util.c  recipe_util.h  script.md  script_zh.md
.github/workflows/: cmake.yml
common-rs/: Cargo.toml
common-rs/src/: cancel_flag.rs  lib.rs  my_error.rs  region.rs  tree_value.rs  util.rs
crab-nbt-ext/: Cargo.toml
crab-nbt-ext/src/: lib.rs
dev-doc/: README.md  plugin.md  region_create.md
dh_util/: CMakeLists.txt  dh_string_util.c  dh_string_util.h  file_util.c
lang/: en_US.json  zh_CN.json
nbt-to-vec/: Cargo.toml  build.rs
nbt-to-vec/src/: lib.rs
po/: CMakeLists.txt
po/dhlrc/: dhlrc.pot  dhlrc.ts  dhlrc_qt.pot  zh_CN.po
po/dhutil/: dhutil.pot  zh_CN.po
region-litematic-rs/: Cargo.toml  build.rs
region-litematic-rs/src/: lib.rs
region-nbt-rs/: Cargo.toml  build.rs
region-nbt-rs/src/: config.rs  lib.rs  output.rs
region-rs/: Cargo.toml  build.rs
region-rs/src/: default.rs  file.rs  i18n.rs  lib.rs  region_getter.rs
resources/: CMakeLists.txt  data_version.csv  dhlrc.qrc  dhlrc.xml  handle_block.json  region_create.md
src/: CMakeLists.txt  blocklistui.cpp  blocklistui.h  blocklistui.ui  blockreaderui.cpp  blockreaderui.h  blockreaderui.ui  blockshowui.cpp  blockshowui.h  blockshowui.ui  common.c  common.h  common_info.c  common_info.h  config.c  config.h  configobjectui.cpp  configobjectui.h  conv_feature.c  conv_feature.h  create_nbt.c  create_nbt.h  csv_parser.c  csv_parser.h  dh_bit.c  dh_bit.h  dh_mt_table.c  dh_mt_table.h  dhcheckboxgroup.cpp  dhcheckboxgroup.h  dhgameconfigui.h  dhhelpui.cpp  dhhelpui.h  dhlinklikebutton.cpp  dhloadjob.cpp  dhloadjob.h  dhlrc_list.c  dhlrc_list.h  dhpushbutton.cpp  dhpushbutton.h  (+87 more)
src-qml/: CMakeLists.txt  Main.qml  Manage.qml  NbtReader.qml  dhnbt.cpp  dhnbt.h  dhnbtlistmodel.cpp  dhnbtlistmodel.h  dhrealconfigdialog.h  dhtreefilter.cpp  dhtreefilter.h  main.cpp  nbtvec.h  region.h
src/cli/: CMakeLists.txt  cli_util.c  cli_util.h  main_cli.c  main_cli.h  manage_nbt.cpp  manage_nbt.h
src/config/: config.kcfg
src/conv/: CMakeLists.txt  main_conv.c  main_conv.cpp  main_conv.h  region_conv.cpp  region_conv_c.cpp
src/feature/: CMakeLists.txt  conv_feature.c  conv_feature.h  dh_module.c  dh_module.h  mcdata_feature.c  mcdata_feature.h  recipe_feature.c  recipe_feature.h  unzip_feature.c  unzip_feature.h
src/gtk/: CMakeLists.txt  input_dialog.c  input_dialog.h  main_gtk.c  main_gtk.h  manage_nbt.c  manage_nbt.h  manage_window.c  manage_window.h  module.c  module.h  nbt_list.h
src/mcdata/: CMakeLists.txt  mcdata.c  mcdata.cpp  mcdata.h
src/mcdir/: CMakeLists.txt  internal_config.c  internal_config.h  path.c  path.h
src/nbt-reader/: CMakeLists.txt
src/qt/: CMakeLists.txt  addtranslationui.cpp  addtranslationui.h  addtranslationui.ui  blocklistui.cpp  blocklistui.h  blocklistui.ui  blockreaderui.cpp  blockreaderui.h  blockreaderui.ui  blockshowui.cpp  blockshowui.h  blockshowui.ui  configui.cpp  configui.h  configui.ui  dhgameconfigui.h  dhlinklikebutton.h  dhloadobject.cpp  dhloadobject.h  dhtableview.cpp  dhtableview.h  dhtreefilter.h  findassetsui.cpp  findassetsui.h  findassetsui.ui  generalchoosedialog.cpp  generalchoosedialog.h  generalchooseui.cpp  generalchooseui.h  genericui.cpp  genericui.h  ilchooseui.cpp  ilchooseui.h  ilreaderui.cpp  ilreaderui.h  loadobjectui.cpp  loadobjectui.h  loadregionui.cpp  loadregionui.h  (+62 more)
src/qt/config/: config.kcfg  settings.kcfgc
src/qt/configui/: CMakeLists.txt  configui.cpp  configui.h
src/qt/itemlist-manage/: CMakeLists.txt  manageitemlistui.cpp  manageitemlistui.h
src/qt/nbt-reader/: CMakeLists.txt  nbtreaderui.cpp  nbtreaderui.h  nbtreaderui.ui
src/recipe_class/: recipe_general.c  recipe_general.h  recipe_shaped.c  recipe_shaped.h  recipe_shapeless.c  recipe_shapeless.h  recipe_smelting.c  recipe_smelting.h
src/recipe_class_ng/: recipes_general.c  recipes_general.h  recipes_shaped.c  recipes_shaped.h  recipes_shapeless.c  recipes_shapeless.h  recipes_smelting.c  recipes_smelting.h
src/recipe_handler/: CMakeLists.txt  handler.c  handler.h
src/recipe_handler/recipes/: CMakeLists.txt  shaped.c  shapeless.c  smelting.c
src/unzip/: CMakeLists.txt  unzip.c  unzip.h
src/util/: CMakeLists.txt  dh_string_util.c  dh_string_util.h  file_util.c  file_util.h  winctl.c  winctl.h
util/: CMakeLists.txt  dh_string_util.c  dh_string_util.h  file_util.h
